--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crime-visualization",
+  "name": "infovis-assignments",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "bootstrap": "^5.3.2",
+    "d3": "^7.9.0",
+    "leaflet": "^1.9.4",
+    "next": "^15.0.3",
+    "react": "^18",
+    "react-bootstrap": "^2.10.0",
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
