--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "bootstrap": "^5.3.2",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "next": "^15.0.3",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^2.1.0",
+    "react-leaflet-markercluster": "^4.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
