--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
-    "react-leaflet-markercluster": "^4.2.1"
+    "react-leaflet-markercluster": "^4.2.1",
+    "react-simple-maps": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
