--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/material": "^6.2.0",
+    "bootstrap": "^5.3.3",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "next": "^15.0.3",
     "react": "^18",
-    "react-bootstrap": "^2.10.0",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
-    "react-leaflet-markercluster": "^4.2.1",
     "react-simple-maps": "^3.0.0"
   },
   "devDependencies": {
